--- a/cell_classification_local.ipynb
+++ b/cell_classification_local.ipynb
@@ -36,38 +36,24 @@
       "source": [
         "## TODO\n",
         "\n",
-        "- [x] Test with colab trained weight\n",
+        "1. ~~Figure out how to deploy using kubectl~~\n",
         "\n",
-        "- [ ] Fix training with auxiliary enabled\n",
+        "2. ~~Setup bash aliases~~\n",
         "\n",
-        "- [ ] Figure out how to deploy using kubectl\n"
+        "3. Fix training with auxiliary enabled\n",
+        "\n",
+        "4. Perform NAS from scratch\n",
+        "\n",
+        "5. Visualize Training with tensorboard\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        " "
       ],
       "cell_type": "markdown",
       "metadata": {}
-    },
-    {
-      "source": [
-        "## Deploying on Kubernetes"
-      ],
-      "cell_type": "markdown",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "NAME                                          READY   STATUS              RESTARTS   AGE\naahamed-2080ti-sg4qb-4m2bg                    1/1     Running             0          46h\naahamed-2080ti-sj6ql-bcqcf                    0/1     Completed           0          46h\nabhibha-login                                 1/1     Running             0          68m\nabhibha-rbt-test-68vcm                        0/1     Error               0          5m20s\nabhibha-rbt-test-cbpm2                        0/1     Error               0          5m26s\nabhibha-rbt-test-smdv9                        0/1     Error               0          3m10s\nabhibha-rbt-test-vd8tw                        0/1     Error               0          4m30s\nabhibha-rbt-test-z6dlx                        0/1     Error               0          5m10s\nabhibha-rbt-test-z82w8                        0/1     Error               0          30s\nayush-darts-gan-2hpkg                         1/1     Running             0          7d16h\nayush-darts-gan-high-5trmm                    1/1     Running             0          38h\nayush-login                                   1/1     Running             0          5h18m\nhaoban-darts-gamma-mjob4xnp7-89b5n            1/1     Running             0          2d12h\nhaoban-darts-order-mjobftdvt-56z5r            1/1     Running             0          2d12h\nhaoban-darts-s4-ejob5dzrc-mj88b               1/1     Running             0          2d12h\nhaoban-darts-s5-ejob96srq-9bftv               1/1     Running             0          12h\nhaoban-login                                  0/1     Error               0          46h\nhaoban-pcdarts-s1-ejobjf7sz-97rtg             1/1     Running             0          2d12h\nhaoban-pcdarts-s1-ejobr2sxt-m494t             1/1     Running             0          2d12h\nhaoban-pdarts-ejob69l6x-dlws4                 1/1     Running             0          2d5h\nhaoban-pdarts-ejob9wfwp-trc9k                 1/1     Running             0          2d12h\nhaoban-pdarts-ejobvmlc7-fshnf                 1/1     Running             0          2d5h\nhaoban-pdarts-mjobb8djh-6xhtm                 1/1     Running             0          2d12h\nhrahman-login                                 0/1     DeadlineExceeded    0          11h\nhrahman-sgl-darts-train-kgpvj-29qkd           0/1     Completed           0          10h\nhrahman-sgl-pcdarts-train-6scx7-9jgwq         0/1     Completed           0          10h\nhrahman-sgl-pdarts-train-2f749-9qzk4          0/1     Completed           0          10h\njay-search-lfm-darts-1st-cifar10-r18-7nwr7    0/1     Completed           0          22h\njay-search-lfm-darts-1st-cifar10-r50-ntk7s    0/1     Completed           0          22h\njay-search-lfm-darts-1st-cifar100-r18-pjz5m   1/1     Running             0          22h\njay-search-lfm-darts-1st-cifar100-r50-7k746   0/1     Completed           0          22h\njwink-login                                   0/1     DeadlineExceeded    0          10h\njwink-nih-darts-blzjz                         1/1     Running             0          10h\nk5wang-login                                  0/1     DeadlineExceeded    0          17d\nkanya-dartsic-joblgv2c-f29cp                  1/1     Running             0          10d\nlizhang-lfm-pod1                              1/1     Running             0          110m\nlizhang-lfm-pod2                              1/1     Running             0          107m\nnikhil-fashion-hxql2-vtbtp                    0/1     Completed           0          2d19h\nnikhil-login                                  1/1     Running             0          124m\nnikhil-pdart2-grfmc-v92tm                     1/1     Running             0          5d10h\nnikhil-skin3-hvhsm-8lp2b                      0/1     Completed           0          5d10h\nnikhil-skindart2-xd9xx-csddr                  0/1     Completed           0          6d10h\nnikhil-skinred-jrjbm-9zf59                    1/1     Running             0          121m\nnikhil-skinred-nc8p2-bgprt                    0/1     Completed           0          10h\npranjal-rbv-sst2-job72lbb-6gd4s               0/1     Error               0          6h1m\npranjal-rbv-sst2-job72lbb-8wqjc               1/1     Running             0          28m\npranjal-rbv-sst2-job72lbb-pvzw9               0/1     Error               0          148m\npranjal-rbv-sst2-jobxxgqv-42hbx               1/1     Running             0          8h\nrenyi-lfmdlhhf-2wdnk                          0/1     Error               0          116m\nrenyi-lfmdlhhf-bvxl6                          0/1     Error               0          120m\nrenyi-lfmdlhhf-cqmf8                          0/1     Error               0          124m\nrenyi-lfmdlhhf-kzwfn                          0/1     Error               0          128m\nrenyi-lfmdlhhf-lcsbp                          0/1     Error               0          108m\nrenyi-lfmdlhhf-tkrzs                          0/1     Error               0          125m\nrenyi-lfmdlhhf-x8ff9                          0/1     Error               0          114m\nrenyi-login                                   1/1     Running             0          4h12m\nritvik-lfm-f3-darts74wws-n8f97                0/1     Completed           0          4d14h\nritvik-lfm-pcdarts-eval8jfws-98t47            0/1     Completed           0          4d14h\nritvik-login                                  0/1     DeadlineExceeded    0          4d18h\nritvik-nih-searchzpq4m-x6z8g                  0/1     Completed           0          7d18h\nrpanda-gpu-debug                              1/1     Running             0          15m\nsai-login                                     0/1     DeadlineExceeded    0          3d11h\nsange-login                                   0/1     Error               0          2d3h\nsange2-job-tdcgb                              1/1     Running             0          53m\nsange2-login                                  1/1     Running             0          61m\nsangelm-login                                 0/1     Pending             0          79s\nshubham-login                                 0/1     DeadlineExceeded    0          6h31m\nshubham-xray5lt2x-ghbp4                       0/1     Completed           0          5h12m\nsreeh-jobxdlb6-58v97                          0/1     ContainerCreating   0          32h\ntest-storage-5b6989679-xgrvz                  1/1     Running             1          32h\n"
-          ]
-        }
-      ],
-      "source": [
-        "!kubectl get pods"
-      ]
     },
     {
       "source": [
@@ -92,9 +78,21 @@
         "\n",
         "4. [CUDA out of memory](https://pytorch.org/docs/stable/notes/faq.html) -- batch size too large\n",
         "\n",
-        "5. CUDA out of memory after changing batch size, while testing on colab - Loop thru test_queue inside with torch.no_grad()\n",
+        "5. CUDA out of memory after changing batch size, while testing on colab - Loop thru test_queue inside of torch.no_grad()\n",
         "\n",
-        "6. In train(), infer(), change top 5 to top2, since there are only 4 clases to predict.\n"
+        "6. In train(), infer(), change top 5 to top2, since there are only 4 clases to predict.\n",
+        "\n",
+        "7. error: unrecognized arguments while running train.py with cluster/train.sh bash script. Quick fix: execute using .yaml file instead. \n",
+        "\n",
+        "8. Upon restart, import numpy in .py files result in ```ModuleNotFoundError: No module named 'numpy'```. [Stackoverflow](https://stackoverflow.com/a/40186317): \n",
+        "\n",
+        "> a) Make sure you are choosing the anaconda python interpreter\n",
+        "> b) Try ```conda install numpy``` if step 1 doesn't solve the problem \n",
+        "\n",
+        "9. Training with auxiliary enabled result in tensor size mismatch: ```mat1 and mat2 shapes cannot be multiplied (10x62208 and 768x4)```.\n",
+        "> See [this discussion](https://stackoverflow.com/a/66338440)\n",
+        "```\n",
+        "```\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
